--- a/chapterx6.adoc
+++ b/chapterx6.adoc
@@ -176,11 +176,11 @@ these things. Or, you know, _don't_, if you believe that studying
 balhámotesse isn't for you. There are zero obligations. _But_ if you _are_
 interested in joining in the fun and getting your paws wet, then you are
 cordially invited to the next Feral Congregation. It will take place next
-Saturday at 10 PM, right here! I will be hosting. You can bring some
-friends, too, but of course I recommend getting them up to speed on some
-basic balhámotesse concepts. Oh, and I should mention there's a
-#balhamotesse group on YipTalk, feel free to log in and say hi. My nick is
-simply '`Winter.`' Farewell!`"
+Friday at 10 PM, right here! I will be hosting. You can bring some friends,
+too, but of course I recommend getting them up to speed on some basic
+balhámotesse concepts. Oh, and I should mention there's a #balhamotesse
+group on YipTalk, feel free to log in and say hi. My nick is simply
+'`Winter.`' Farewell!`"
 
 All the animals proceeded to leave, but Winter stopped Bisky.
 
@@ -206,4 +206,9 @@ Congregation?`"
 
 "`Good, good. Well, maybe I'll see you then!`"
 
-"`Right on,`" Bisky said.
+"`Right on,`" Bisky said, as she waved goodbye and headed out the door.
+
+The nighttime breeze was cool, refreshing, and clarifying. Bisky _pffft_'d
+to herself after thinking about how "`perceptive`" Winter thought she was.
+
+_It's so obvious,_ she thought to herself. _I am a follower of Balhámoté._
