--- a/chapter01.adoc
+++ b/chapter01.adoc
@@ -92,10 +92,10 @@ _Oh, shit,_ Bisky thought.
 
 One by one, all of the skunks approached the portrait and left something
 behind for him. Petrus's cousin and longtime business partner, Acanthus,
-gave him a small sextant, a nod to their sailing hobby, and recounted an
-anecdote about how they nearly got lost at sea one time. He mentioned in
-passing how Bisky was jealous she couldn't come along for that trip. She
-remembered that feeling.
+gave him a compass, a nod to their hiking hobby, and recounted an anecdote
+about how they nearly got lost in the hills around Orchidia one time. He
+mentioned in passing how Bisky was jealous she couldn't come along for that
+trip. She certainly remembered that feeling.
 
 The landlady of Petrus's bakery, Rose, presented a bouquet of flowers and,
 while eyeing Bisky, formally absolved him of the last month's rent he hadn't
