--- a/chapterx10.adoc
+++ b/chapterx10.adoc
@@ -59,3 +59,103 @@ the parts inside of a duffel bag, flung it over her shoulder, and carried
 the board all the way to the beach. The beach was a half-mile further away
 from her apartment than merely going to the water's edge, because the
 shipping docks had already occupied that area.
+
+It was barely 10 o'clock and the unnamed beach was already rather crowded,
+not because it was popular, but because it was super small. When most
+animals thought of beaches in Port Sokuit, they did not think of the Cargo
+District. They thought of the more touristy areas such as the boardwalk,
+which was a pawful of miles south from where Bisky lived.
+
+This would not be the FlounderCraft's maiden voyage. That happened four or
+five years ago, when both of Bisky's parents spent a long weekend alone
+together in the distant resort town of Roselle, not too far from where they
+were born. They were celebrating their twenty-fifth year of marriage. Bisky
+was supposed to have helped out in the bakery during that time, but instead
+she assembled her FlounderCraft for the first time and took to the sea. She
+didn't go very far, never past the outer limits of Sokuit Lagoon, but it was
+the very first vessel that she had navigated herself. It didn't matter how
+much of a toy the FlounderCraft was in comparison to _real_ boats. The point
+was Bisky Damiat was _in control._
+
+Four or five years later, Bisky finally had the opportunity to set sail
+again. The water by the little municipal beach in the Cargo District was far
+deeper than Sokuit Lagoon, and considerably rougher and colder. Basically,
+this beach had no redeeming qualities. But she knew that the FlounderCraft
+could handle it, and the winds were strong this morning.
+
+There was virtually zero room left on the beach, since it was so small and
+crowded, but that hardly mattered to Bisky because once the dinghy was
+assembled, she would not be setting paw back onto the sand for the rest of
+the day. The other animals and their pups were inconvenienced by Bisky's
+construction project and her unwieldy tail, but she tried to reassure them
+that she'd be done quickly. She was not kidding. Bisky, always the capable
+engineer, assembled the boat in half the time it required most animals.
+Within minutes, she had a little boat with the lateen sail properly rigged.
+The stylized starfish on the field of white clearly appeared prouder and
+more at home in this arrangement, instead of pretending to be some excuse
+for a shower curtain.
+
+And Bisky, whose heart pumped blood downriver towards the sea, who knew
+exactly what she was doing, who knowingly caused her parents and every other
+skunk ancestor to roll in their graves, embarked.
+
+The choppiness of the waves were no match for the skunk's dexterous
+manipulation of the sail. She wielded the ropes as if in a chariot driven by
+a team of seahorses. The wind was somewhat erratic, intruding in brief gusts
+whenever it felt like, but Bisky had already struck a deal with the Maker.
+She could feel the wind before it came.
+
+The FlounderCraft could really only fit one animal, or maybe one animal and
+their kit, thus even the slightest movement of the sail seemed amplified. It
+was rather easy to oversteer, especially if one were going as fast as Bisky
+was. But Bisky's valiant mastery of the ropes and clever utilization of her
+big, fluffy tail made for smooth sailing.
+
+She was the only one sailing at this beach. It did not occur to her if any
+of the several animals still on the shore thought it was just plain weird a
+_skunk_ would be out in the water, let alone running downwind directly into
+the wild blue. Skunks never belonged in the water. It was not a skunk's
+place.  Well, maybe it wasn't _their_ place to judge her so.
+
+She went as far as the first line of buoys, which were situated a hundred
+yards away from the shore. With a small paddle, she rotated the boat into
+the opposite direction and tied off the sail so that the craft remained
+stationary.
+
+The trek was already somewhat taxing for the little skunk, having tamed
+waves that she should not have been able to tame. But a torrent of
+adrenaline and sheer, pure joy sneakily kicked in and nearly threw her
+overboard. Suddenly unsure of what exactly was going on, she decided let her
+body and her brain do whatever it wanted. And her body and brain wanted
+Bisky to stand up, face the distant city, and sing the song only skunks
+exhilarated beyond recognition sing.
+
+_Aaaaaaaiiiieeeee!!!_
+
+The cry immediately depleted Bisky's fuel tank, and she lost her pawing, but
+she instinctually grabbed onto the closet line and saved herself from
+falling overboard yet again. She laughed boisterously at nothing, at
+herself, at everything. After a moment to re-energize, she stood up and
+faced the city again.
+
+"`Listen up, you fishdicks!! I'm a daytime skunk! I'm a proud woman! I study
+balhámotesse! I'm probably bisexual! I'm gonna sail in circles around all of
+you one day!  And I'm _so alone_ in this world you don't have a fucking
+clue!!`"
+
+She turned around to face the open ocean, heaved a sigh of relief, then
+resumed her confession.
+
+"`My parents are dead and I'm scared shitless! By the way, I'm so sorry,
+dad! Anyway, I'm no good at anything!! I'm a shipwreck. I'm desperate and
+I'm pleased to meet you and I just want to be your friend.`"
+
+A beat. Then, as quietly as she could: "`There's only enough room on this
+boat for one.`" The bitterness of that last statement did not taste good
+mixed with the salty air of the sea.
+
+And just like that, despite having conquered the choppy waves with such
+graceful skill and adept finesse, Bisky was defeated. She let herself drop
+to the deck, but didn't have plans to get back up anytime soon.
+
+
