--- a/chapterx09.adoc
+++ b/chapterx09.adoc
@@ -1,24 +1,25 @@
 == Chapter x9 (in which bisky steals a ship)
 
 In retrospect, Bisky was the _perfect_ animal to pull it off. She was
-knowledgeable about the specific vessel in question. She was mostly black
-and could hide in the night easily. She lived rather close to the docks. She
-needed the money. Too bad Bisky wasn't as nocturnal as most skunks usually
-are.
+knowledgeable about the specific vessel in question. Her fur was already
+mostly black and could hide in the night easily. She lived rather close to
+the docks. She needed the money. Too bad Bisky wasn't as nocturnal as skunks
+are supposed to be.
 
 She had attempted to get some rest -- even a little _nap_ for Balhámoté's
-sake, or even the Maker's, she was so desperate -- before embarking on
-this...  quest. Instead, she was constantly woken up by her heart, which was
+sake, or even the Maker's, she was so desperate -- before embarking on this,
+uh, quest. Instead, she was constantly woken up by her heart, which was
 beating as if a boxer were laying into it.
 
 Her alarm went off. 2:30 AM. She shut it off immediately, hurriedly, out of
 fear that her downstairs neighbors might hear it and then call the
-authorities on her. She took a deep breath, as deep as the sea, and hopped
-out of bed.
+authorities on her. She took a deep breath, as deep as the vast,
+incomprehensible sea, and hopped out of bed.
 
 Bisky was cold. Autumn in the Cargo District in the middle of the night was
-always pretty chilly. But Bisky felt frozen. She put on her oversized hoodie
-even though she was prepared to burst like a water balloon full of sweat. 
+always pretty chilly. But Bisky felt frozen. Shivering, wshe put on her
+oversized sweater even though she was prepared to burst like a water balloon
+full of sweat. 
 
 She was desperate for ways to calm down. She considered taking a bite of the
 cannabis gummy, but was afraid it would kick in at the perfectly wrong
@@ -34,5 +35,48 @@ would have been deathly ashamed, betrayed, then left behind and forgotten.
 the half-eaten muffin. 
 
 Eventually, she finished the muffin and changed into the blackest outfit she
-could manage. BShe looked in the mirror, turned around, and fluffed her tail,
-even though the occasion didn't seem to warrant a fluffy tail at all.
+could manage. Black slacks, black hoodie, temporary black die for the white
+of her tail, and black galoshes. She looked in the mirror, turned around,
+and fluffed her tail, even though the occasion didn't seem to warrant a
+fluffy tail at all. But if she was going to pursue a life of crime, then
+might as well look good while doing it.
+
+Bisky sought Gardenia's turquoise knitted bag out of habit, but immediately
+recognized that might not be such a wise choice. She dug around the kitchen
+drawers to find something more suitable. Indeed, she located the ideal
+thing: a medium-sized black canvas tote bag, which could carry everything
+she was planning to bring, but unlike the larger and perhaps more practical
+trash bag, it was silent and stealthy. Bisky made sure the toolkit,
+KnifePup's card, the ship's blueprint and some spare muffins all fit inside.
+
+2:45 AM. If she were to leave now, she would arrive at the docks at exactly
+the prearranged time, but she decided to take an extra minute or two to
+study the tugboat's plans again, in an attempt to memorize it. She wasn't a
+particularly large tugboat, nor an exotic one. Bisky was by no means a
+tugnut, but felt like she had seen this sort of harbor tug in the past, from
+all of her readings at school and as a pup.
+
+2:48 AM. Bisky decided right now was the time to go. She packed her black
+bag, tied it off and flung it over her shoulder. She quietly headed
+downstairs and outside into the cold, brisk night.
+
+Within ten minutes, she arrived at the meeting location, a nameless and
+seemingly random corner within the mazelike canyons of shipping containers.
+Bisky spotted two shadowy figures and approached them. Silently, the two
+other animals each produced a small card, each of which featured an
+irregular yet geometric pattern, and contained a fragment of a sentence.
+Bisky understood this cue to mean she should produce her card, too, and she
+did. The three cards, when arranged together, completed the geometric
+background and the sentence, which read: "`CUM FUR SEMPER FUR.`"
+
+Bisky giggled. "`Cum fur?`"
+
+"`Shut up, skunk!`" KnifePup's voice emanated. "`It's Latin. It means '`once
+a thief, always a thief.`' It's actually kinda cool.`"
+
+"`Okay, okay,`" Bisky's laugh dwindled.
+
+"`Alright let's go,`" Blaster42's voice said.
+
+It was very cold and very dark. There hardly was a moon to illuminate what
+they were doing.
