--- a/chapterx10.adoc
+++ b/chapterx10.adoc
@@ -1,6 +1,6 @@
 == Chapter x10 (in which bisky sails alone)
 
-Bisky did not usually have mornings to herself, but she was going to make
+Bisky did not typically have mornings to herself, but she was going to make
 the most out of this one. She prepared a simple breakfast: an almond muffin
 from the family bakery, warmed up, sliced, and lightly dressed with honey
 flavored with anise, with sliced mackerel on the side and a glass of lime
@@ -117,7 +117,7 @@ _skunk_ would be out in the water, let alone running downwind directly into
 the wild blue. Skunks never belonged in the water. It was not a skunk's
 place.  Well, maybe it wasn't _their_ place to judge her so.
 
-She went as far as the first line of buoys, which were situated a hundred
+She went as far as the first line of buoys, which were situated two hundred
 yards away from the shore. With a small paddle, she rotated the boat into
 the opposite direction and tied off the sail so that the craft remained
 stationary.
@@ -138,24 +138,32 @@ falling overboard yet again. She laughed boisterously at nothing, at
 herself, at everything. After a moment to re-energize, she stood up and
 faced the city again.
 
-"`Listen up, you fishdicks!! I'm a daytime skunk! I'm a proud woman! I study
+"`Listen up, you fishdicks!! I'm a daytime skunk! I'm a woman! I study
 balhámotesse! I'm probably bisexual! I'm gonna sail in circles around all of
 you one day!  And I'm _so alone_ in this world you don't have a fucking
 clue!!`"
 
 She turned around to face the open ocean, heaved a sigh of relief, then
-resumed her confession.
+resumed her confession to the city.
 
 "`My parents are dead and I'm scared shitless! By the way, I'm so sorry,
-dad! Anyway, I'm no good at anything!! I'm a shipwreck. I'm desperate and
-I'm pleased to meet you and I just want to be your friend.`"
+dad! I really do love you! Anyway, I'm no good at anything!! I'm a shipwreck
+and I'm desperate and I'm pleased to meet you and I just want to be your
+friend.`"
 
-A beat. Then, as quietly as she could: "`There's only enough room on this
-boat for one.`" The bitterness of that last statement did not taste good
-mixed with the salty air of the sea.
+A beat. Then, as quietly as she could: "`...but there's only enough room on
+this boat for one.`" The bitterness of that last statement did not taste
+good mixed with the salty air of the sea.
 
-And just like that, despite having conquered the choppy waves with such
-graceful skill and adept finesse, Bisky was defeated. She let herself drop
-to the deck, but didn't have plans to get back up anytime soon.
+And just like that, despite having conquered the waves with such graceful
+skill and finesse, Bisky felt defeated. She let herself drop to the deck,
+but didn't have plans to get back up anytime soon. She sat there, hundreds
+of yards away from the shore, swaying gently, and meditated. One contingent
+of Bisky's brain wanted her to throw herself overboard. Another faction
+believed in her captaining ability -- her capability to navigate the muddy,
+temperamental and unknowable waters of her destiny.
 
-
+"`There's only enough room on this boat for one,`" she repeated to herself.
+She did not want to be okay with that. But right at that moment, she opened
+her heart and every square inch of her indomitable yet frightened self to
+the possibility that she might.
