--- a/chapterx09.adoc
+++ b/chapterx09.adoc
@@ -17,9 +17,127 @@ authorities on her. She took a deep breath, as deep as the vast,
 incomprehensible sea, and hopped out of bed.
 
 Bisky was cold. Autumn in the Cargo District in the middle of the night was
-always pretty chilly. But Bisky felt frozen. Shivering, wshe put on her
-oversized sweater even though she was prepared to burst like a water balloon
-full of sweat. 
+always pretty chilly. But Bisky felt frozen. She took this opportunity to
+quickly put on her new work clothes, the blackest outfit she could manage.
+Black slacks, black hoodie, temporary black die for the white of her tail,
+and black galoshes. She looked in the mirror, turned around, and fluffed her
+tail, even though the occasion didn't seem to warrant a fluffy tail at all.
+But if she was going to pursue a life of crime, then might as well look good
+while doing it. Bisky's transformation into Emerald was complete.
+
+Emerald sought Gardenia's turquoise knitted bag out of habit, but
+immediately recognized that might not be such a wise choice. She dug around
+the kitchen drawers to find something more suitable. Indeed, she located the
+ideal thing: a medium-sized black canvas tote bag, which could carry
+everything she was planning to bring, but unlike the larger and perhaps more
+practical trash bag, it was silent and stealthy. Emerald made sure the
+toolkit, KnifePup's card, the ship's blueprint, a nautical map of the
+surrounding area, and some spare muffins and cannabis gummies all fit
+inside.
+
+2:45 AM. If she were to leave now, she would arrive at the docks at exactly
+the prearranged time, but she decided to take an extra minute or two to
+study the map and the tugboat's plans again, in an attempt to memorize it.
+She wasn't a particularly large tugboat, nor an exotic one. Emerald was by
+no means a tugnut, but felt like she had seen this sort of harbor tug in the
+past, from all of her readings at school and as a pup.
+
+2:48 AM. Emerald decided right now was the time to go. She packed her black
+bag, tied it off and flung it over her shoulder. She quietly headed
+downstairs and outside into the cold, brisk night.
+
+Within ten minutes, she arrived at the meeting location, a nameless and
+seemingly random corner within the mazelike canyons of shipping containers.
+Emerald spotted two shadowy figures and approached them. Silently, the two
+other animals each produced a small card, each of which featured an
+irregular yet geometric pattern, and contained a fragment of a sentence.
+Emerald understood this cue to mean she should produce her card, too, and
+she did. The three cards, when arranged together, completed the geometric
+background and the sentence, which read: "`CUM FUR SEMPER FUR.`"
+
+Emerald giggled. "`Cum fur?`"
+
+"`Shut up, skunk!`" KnifePup's voice emanated. "`It's Latin. It means '`once
+a thief, always a thief.`' It's actually kinda cool.`"
+
+"`Okay, okay,`" Emerald's laugh dwindled.
+
+"`Alright let's go,`" Blaster42's voice said.
+
+It was very cold, very dark and very quiet. There hardly was a moon to
+illuminate what they were doing. No work would happen on the docks at all
+until 5:30 at the earliest, which gave the three plenty of time to do the
+deed. They sprinted quickly but silently through the narrow, labyrinthine
+hallways constructed by shipping containers. It was by no means the most
+direct route to the target tugboat, but it did provide ample cover. KnifePup
+led the trio, with Blaster42 behind and leaving Emerald feeling like a
+caboose. But she knew she would have her moment very soon.
+
+Suddenly, there was a fork in the path. A wall of shipping containers
+required them to choose between a left or a right turn. KnifePup stopped in
+his tracks and took what Emerald thought was a frightening amount of time.
+KnifePup approached the wall, scanned it up and down with his sharp vision.
+Then, he selected a seemingly random spot close to the ground, cupped his
+paw against it and shined a flashlight on it, then peeked inside the cup.
+He nodded contentedly and signaled that the group should make a right turn.
+
+After only a few more maneuverings through the shipping container maze, they
+finally arrived at the exit point and witnessed the quay itself for the
+first time. The moon wasn't at all full, but it certainly was a crisp, clear
+night and the moonlight still glistened and bounced off the surface of the
+water. Directly in front of them, on a pontoon, lay the tugboat. She swayed
+gently, moored to a suspiciously unmaintained wooden pier. Bisky found this
+view rather peaceful, and paused to admire it for a second.
+
+"`No time to lose!`" Blaster42 whispered, and rushed toward the pier.
+
+Back to Emerald. She caught up behind them.
+
+The excitable KnifePup rushed silently onto the pier, but stopped suddenly
+when the pier creaked. The noisy wood split the night in half and was nearly
+deafening. KnifePup froze in his tracks, mid-step, and slowly turned around
+to reveal a hilarious grimace plastered onto his face. Emerald giggled
+again. Without changing his position, his grimace turned into a silent snarl
+in Emerald's direction, baring his teeth. Emerald changed her tune, as
+requested. KnifePup finally set both of his paws gently onto the pier, and
+turned to face the tugboat, which was moored a little further away, then
+crouched down and wagged his tail.  Neither Blaster42 nor Emerald remembered
+the part of the plan that involved _leaping majestically_ from the edge of
+the pier into the boat, but at least it was the quieter option.
+
+Blaster42 and Emerald stared at each other for a beat. Blaster42 shrugged,
+then hopped onto the boat by means of hopping from one supporting post to
+the next.  Emerald did the same. All three were aboard, and then each went
+to their station. Blaster42 opened up the hatch and searched for the goods
+in the storeroom below. KnifePup went as far as he could on the bow, as some
+sort lookout. Emerald went directly to the ladder that led to the bridge,
+climbed it, and entered the wheelhouse, her heart pounding with joy and
+fright and excitement apprehension.
+
+Unfortunately, much to her dismay and her horror, Emerald discovered there
+was no wheel.
+
+"`What?!`" Bisky exclaimed out loud.
+
+KnifePup heard this, spun around, looked up and gestured to her to keep it
+down. Then, he mouthed: "`Get us outta here!`"
+
+Emerald made an okay sign with her paw, but was still clearly flustered,
+which sent KnifePup worrying.
+
+This tugboat was a more modern one, with two joysticks on either side for
+the animal steering it, in place of a wheel. She wasn't unfamiliar with this
+arrangement, but it didn't match the plans, Or so she thought... she wanted
+to lay the plans out somewhere and study them again, but she also knew the
+dog and the squirrel were counting on her to get a move on. Emerald briefly
+prayed to Balhámoté that the pages she did carry from the operator's manual
+would prove useful enough. After a moment of silence, she delivered the same
+prayer to the Maker. Surely at least one of them was listening.
+
+Emerald flicked a switch and the little computer screen illuminated. She let
+out a reassuring sigh of relief when she confirmed the computer screen did
+in fact show what she was expecting: their geolocation. She believed at any
+moment her heart was going to leap out of her and abandon ship.
 
 She was desperate for ways to calm down. She considered taking a bite of the
 cannabis gummy, but was afraid it would kick in at the perfectly wrong
@@ -30,53 +148,18 @@ used to saying that, and then took a methodical, deliberate bite.  She
 chewed as slowly as she could, and tried to think about the raspberry and
 flax taste instead of what her father would think about _all of this._ He
 would have been deathly ashamed, betrayed, then left behind and forgotten.
+Bisky had waited for this moment her entire life. But _none_ of the
+circumstances were right. Everything was wrong. She was not really a
+criminal, she was not really a risk-taker of gargantuan proportions, she
+wasn't really a rulebreaker, and most importantly, she was not really acting
+like a mature skunk.
 
 "`I'm so sorry, dad,`" Bisky whispered. A tear ran off her cheek and into
-the half-eaten muffin. 
+the half-eaten muffin.
 
-Eventually, she finished the muffin and changed into the blackest outfit she
-could manage. Black slacks, black hoodie, temporary black die for the white
-of her tail, and black galoshes. She looked in the mirror, turned around,
-and fluffed her tail, even though the occasion didn't seem to warrant a
-fluffy tail at all. But if she was going to pursue a life of crime, then
-might as well look good while doing it.
+A beat. Then, with adamantine determination that could slice entire
+container ships like bread, Skipper Emerald finished the muffin in one bite
+and fired up the vessel's engines.
 
-Bisky sought Gardenia's turquoise knitted bag out of habit, but immediately
-recognized that might not be such a wise choice. She dug around the kitchen
-drawers to find something more suitable. Indeed, she located the ideal
-thing: a medium-sized black canvas tote bag, which could carry everything
-she was planning to bring, but unlike the larger and perhaps more practical
-trash bag, it was silent and stealthy. Bisky made sure the toolkit,
-KnifePup's card, the ship's blueprint and some spare muffins all fit inside.
-
-2:45 AM. If she were to leave now, she would arrive at the docks at exactly
-the prearranged time, but she decided to take an extra minute or two to
-study the tugboat's plans again, in an attempt to memorize it. She wasn't a
-particularly large tugboat, nor an exotic one. Bisky was by no means a
-tugnut, but felt like she had seen this sort of harbor tug in the past, from
-all of her readings at school and as a pup.
-
-2:48 AM. Bisky decided right now was the time to go. She packed her black
-bag, tied it off and flung it over her shoulder. She quietly headed
-downstairs and outside into the cold, brisk night.
-
-Within ten minutes, she arrived at the meeting location, a nameless and
-seemingly random corner within the mazelike canyons of shipping containers.
-Bisky spotted two shadowy figures and approached them. Silently, the two
-other animals each produced a small card, each of which featured an
-irregular yet geometric pattern, and contained a fragment of a sentence.
-Bisky understood this cue to mean she should produce her card, too, and she
-did. The three cards, when arranged together, completed the geometric
-background and the sentence, which read: "`CUM FUR SEMPER FUR.`"
-
-Bisky giggled. "`Cum fur?`"
-
-"`Shut up, skunk!`" KnifePup's voice emanated. "`It's Latin. It means '`once
-a thief, always a thief.`' It's actually kinda cool.`"
-
-"`Okay, okay,`" Bisky's laugh dwindled.
-
-"`Alright let's go,`" Blaster42's voice said.
-
-It was very cold and very dark. There hardly was a moon to illuminate what
-they were doing.
+The engines roared furiously. KnifePup was taken by surprise and _yipped!_
+loudly. _What a scaredy,_ Skipper Emerald thought to herself.
