--- a/chapterx09.adoc
+++ b/chapterx09.adoc
@@ -152,7 +152,7 @@ Bisky had waited for this moment her entire life. But _none_ of the
 circumstances were right. Everything was wrong. She was not really a
 criminal, she was not really a risk-taker of gargantuan proportions, she
 wasn't really a rulebreaker, and most importantly, she was not really acting
-like a mature skunk.
+like a mature or feminine skunk.
 
 "`I'm so sorry, dad,`" Bisky whispered. A tear ran off her cheek and into
 the half-eaten muffin.
@@ -162,4 +162,41 @@ container ships like bread, Skipper Emerald finished the muffin in one bite
 and fired up the vessel's engines.
 
 The engines roared furiously. KnifePup was taken by surprise and _yipped!_
-loudly. _What a scaredy,_ Skipper Emerald thought to herself.
+loudly. _What a scaredy,_ Skipper Emerald thought to herself. She took a
+seat behind between the two joysticks and slowly reversed out of the pier.
+They were moving! Skipper Emerald couldn't believe it. It was only a five
+minute trip to the little unnamed island out in Sokuit Sound, where they
+would dump the goods. The task would be completed in no time.  Emerald was
+in total control. This would be a _walk in the park_. She smiled. 
+
+Suddenly, the thunderous sound of splitting wood forced the animals to
+remember that the tugboat was still moored to the suspiciously unmaintained
+pier.
+
+"`Yip! Yip!!`" KnifePup yipped. But it was a different kind of yip than
+before.
+
+Indeed, the sturdy, powerful tugboat was in the middle of ripping large
+sections of the pier clean off. They had detached the edge of the pier and
+the leftover planks of wood collapsed into the water, making a formidable
+splash.
+
+Skipper Emerald panicked. _Fuck fuck fuck fuck fuck! How do you stop this
+thing?!_ She grabbed the walkie talkie and prayed that the message would
+disseminate in such a way that KnifePup could possibly hear it.
+
+"`KnifePup!`" a telephonish voice whispered across the bridge. "`Use your
+knife!`"
+
+In his panic, KnifePup nodded extra hard, then drew his blade and attempted
+to slice the mooring line. But KnifePup's knives were usually designed to
+cut other animals, not the disturbingly thick hemp rope he was currently
+forced to deal with. Emerald stopped paying attention when she noticed that
+he had given up and commenced desperately stabbing at the line instead of
+trying to legitimately cut it. But Skipper Emerald was also rather pleased.
+She told him what to do, and then he did it. She _captained._ She captained
+the hell outta him.
+
+Emerald rotated one of the joysticks, which caused the tugboat to turn
+around. The rotating process was clunkier than normal, for they were towing
+behind them a considerable chunk of pier.
