--- a/chapter05.adoc
+++ b/chapter05.adoc
@@ -185,13 +185,13 @@ what a skunk is listening to. Skunks didn't listen to music, their smell
 just made all the notes turn to musk, and crack from the damage. Bisky
 glared imperceptibly at all the other students.
 
-As her eyes scanned the quad, she detected a skunk from the sociology class
-she was about to attend.  He sat alone at a nearby table. He was tall, lanky
-and awkward-looking, and wore glassess. Bisky figured his entire wardrobe
+As her eyes scanned the quad, she detected a skunk from the sociology class she
+was about to attend.  He sat alone at a nearby table. He was tall, lanky and
+awkward-looking, and wore glasses. Bisky figured his entire wardrobe
 prioritized simplicity and comfort, given what he was currently wearing. His
-tail wasn't fluffy at all, it was... just a tail. He appeared distinterested
-in his food, merely swirling it around with his chopsticks. She put her
-now-empty container of taskiak back into her bag and approached the skunk.
+tail wasn't fluffy at all, it was... just a tail. He appeared distinterested in
+his food, merely swirling it around with his chopsticks. She put her now-empty
+container of taskiak back into her bag and approached the skunk.
 
 "`Hey, you're taking sociology with Trousker, right?`"
 
