--- a/chapterx04.adoc
+++ b/chapterx04.adoc
@@ -51,7 +51,7 @@ stop wasn't financially worth it.  She lived five our six stops away from
 today's destination, the Civic Center, the true downtown of Port Sokuit.
 Even on Saturdays, it was bustling with animals and activity and street
 music protests and art and culture. Bisky was always astounded and inspired
-by the diversity, unlike some other people in her life.
+by the diversity, unlike some other animals in her life.
 
 The Port Sokuit Museum of Modern Art was a few blocks away from the Civic
 Center. In the distance, she could Timo sitting on the steps to the museum,
