--- a/chapterx10.adoc
+++ b/chapterx10.adoc
@@ -50,8 +50,6 @@ for when he would eventually leave.
 Essentially, the FlounderCraft was hidden in plain sight. And it finally was
 time to take it out.
 
----
-
 FlounderCraft were very small, very simple boats, essentially a dinghy with
 a board-like hull and a lateen sail. They came in a kit, and ostensibly were
 fun to assemble. But Bisky couldn't keep the box. Instead, she put all of
@@ -146,7 +144,7 @@ clue!!`"
 She turned around to face the open ocean, heaved a sigh of relief, then
 resumed her confession to the city.
 
-"`My parents are dead and I'm scared shitless! By the way, I'm so sorry,
+"`My parents are dead and I'm scared scentless! By the way, I'm so sorry,
 dad! I really do love you! Anyway, I'm no good at anything!! I'm a shipwreck
 and I'm desperate and I'm pleased to meet you and I just want to be your
 friend.`"
