--- a/chapter01.adoc
+++ b/chapter01.adoc
@@ -44,7 +44,7 @@ It was not a feeling of joy or ecstasy, really, but rather...  warmth.
 Security. And, most importantly, understanding.
 
 It was so bright outside that from the inside of the temple, any figure who
-stood at the entrance would appear as just a shadow. Gardenia instinctually
+stood at the entrance would appear as just a shadow. Gardenia instinctively
 recognized Bisky's silhouette approaching the threshold and approached her.
 Bisky gave her friend the kind of hug that only best friends give.
 
