--- a/chapterx02.adoc
+++ b/chapterx02.adoc
@@ -64,7 +64,7 @@ fishdickish, and that it made you uncomfortable.`"
 "`_You're_ making me feel uncomfortable,`" the coyote whimpered.
 
 Bisky took a deep breath and squatted to meet the coyote at his level. The
-husky instinctually assumed she was getting to spray them, or something
+husky instinctively assumed she was getting to spray them, or something
 silly like that, but he let his guard down when he realized what she was
 really doing. Bisky looked at the coyote in the eye. The coyote was also
 afraid at first, but then he saw that her eyes were amethyst in color, and
