--- a/chapterx10.adoc
+++ b/chapterx10.adoc
@@ -131,15 +131,15 @@ exhilarated beyond recognition sing.
 _Aaaaaaaiiiieeeee!!!_
 
 The cry immediately depleted Bisky's fuel tank, and she lost her pawing, but
-she instinctually grabbed onto the closet line and saved herself from
+she instinctively grabbed onto the closet line and saved herself from
 falling overboard yet again. She laughed boisterously at nothing, at
 herself, at everything. After a moment to re-energize, she stood up and
 faced the city again.
 
 "`Listen up, you fishdicks!! I'm a daytime skunk! I'm a woman! I study
 balhámotesse! I'm probably bisexual! I'm gonna sail in circles around all of
-you one day!  And I'm _so alone_ in this world you don't have a fucking
-clue!!`"
+you one day! One of my good friends is a fox! And I'm _so alone_ in this
+world you don't have a fucking clue!!`"
 
 She turned around to face the open ocean, heaved a sigh of relief, then
 resumed her confession to the city.
