--- a/chapterx12.adoc
+++ b/chapterx12.adoc
@@ -67,7 +67,12 @@ notice the smirk sculpted on Joyce's face.
 
 Bisky could only speak in smiles.
 
-"`I'm truly glad to see you,`" Timo said earnestly. "`Feeling better?`"
+"`I'm truly glad to see you,`" Timo said earnestly. "`Hey,`" he said to
+Joyce.
+
+"`Hey,`" Joyce replied.
+
+Timo returned his attention to the skunk. "`Feeling better?`"
 
 Bisky nodded. "`Yes, thank you, Timo.`"
 
@@ -101,6 +106,33 @@ through this.`"
 
 "`What can I get ya?`"
 
-"`I want to get in the autumn mood... how about a pumpkin spice latte?`"  
+"`I want to get in the autumn mood... how about a pumpkin spice latte?`"
 
-Bisky secretly 
+Bisky selfishly wanted him to order something more... adventurous. That was
+probably the most boring thing he had ever ordered ever since he learned how
+to say "`Carmen's.`"
+
+Bisky instinctively grabbed a large mug. She confirmed: "`Large, for here?`"
+at the same time Timo was telling her that.  They giggled simultaneously,
+too. Joyce just rolled her eyes.
+
+Timo took a seat at a table for two. Only rarely did anyone accompany him.
+Bisky noticed his aloneness as she brewed the coffee. She poured the coffee
+and the soymilk into the "`for-here`" mug delicately and artistically, in a
+seeming attempt to make a foam heart. Joyce noticed this from the corner of
+her eye, and became immediately suspicious, because Bisky never attempted to
+do that before. Joyce was also suspicious because Bisky was, to put it
+lightly, not very artistic. But Bisky was humming and beaming with joy, the
+happiest she had ever seen her in weeks, so she let her have her moment.
+
+At this point, she would ordinarily call the customer's name to inform them
+their order was ready, but instead, Bisky carried the mug all the way to
+Timo.
+
+"`Here you go.`"
+
+"`Wow, thank you,`" Timo said truthfully. He looked at the pathetic excuse
+for a foam art which gated his entrance to the sweet pumpkin spice. He
+admired how imperfect it was, how it looked more like a potato than a heart.
+He closed his eyes and took a slow, methodical sip. "`This is really good,`"
+he remarked.
