--- a/chapterx04.adoc
+++ b/chapterx04.adoc
@@ -160,9 +160,9 @@ sculpture. But not in the mixed-media sense of a painting-as-a-sculpture.
 This zebra _could_ have been built, but instead that _built_ thing is
 captured here as a painting. It's interesting!`" Timo was all over this.
 
-"`...Yeah!`" was all Bisky could say out loud. Internally, though, she
+"`...uh, yeah!`" was all Bisky could say out loud. Internally, though, she
 wanted to tell him that the strength of her crush could pulverize an entire
-ship.
+container ship.
 
 The Port Sokuit MoMA was a very large, expansive space, and patrons
 typically did not take a tour of the entire collection in one day, if they
@@ -192,3 +192,9 @@ needed to go back the way they came.
 "`I'm glad I made the decision to go left,`" Bisky told the fox.
 
 "`I'm glad, too!`" he concurred.
+
+Bisky simply shook her head with a smirk on her face.
+
+---
+
+
